--- a/src/packages.config
+++ b/src/packages.config
@@ -1,34 +1,103 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="BouncyCastle" version="1.8.5" targetFramework="net452" />
-  <package id="CitizenFX.Core.Client" version="1.0.1715" targetFramework="net452" />
-  <package id="CitizenFX.Core.Server" version="1.0.1715" targetFramework="net452" />
+  <package id="CitizenFX.Core.Client" version="1.0.5886" targetFramework="net471" />
+  <package id="CitizenFX.Core.Server" version="1.0.5886" targetFramework="net471" />
   <package id="CommandLineParser" version="2.6.0" targetFramework="net452" />
   <package id="Costura.Fody" version="3.3.3" targetFramework="net452" />
-  <package id="EntityFramework" version="6.3.0" targetFramework="net452" />
   <package id="EnvDTE" version="8.0.2" targetFramework="net452" />
   <package id="Fody" version="4.2.1" targetFramework="net452" developmentDependency="true" />
   <package id="Google.Protobuf" version="3.10.1" targetFramework="net452" />
-  <package id="JetBrains.Annotations" version="2019.1.3" targetFramework="net452" />
-  <package id="Microsoft.CSharp" version="4.6.0" targetFramework="net452" />
-  <package id="MySql.Data" version="8.0.18" targetFramework="net452" />
-  <package id="MySql.Data.EntityFramework" version="8.0.18" targetFramework="net452" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net452" />
-  <package id="NFive.SDK.Client" version="0.1.0.67" targetFramework="net452" />
-  <package id="NFive.SDK.Core" version="0.1.0.60" targetFramework="net452" />
-  <package id="NFive.SDK.Plugins" version="0.1.0.43" targetFramework="net452" />
-  <package id="NFive.SDK.Server" version="0.1.0.79" targetFramework="net452" />
-  <package id="NGettext" version="0.6.4" targetFramework="net452" />
+  <package id="JetBrains.Annotations" version="2022.1.0" targetFramework="net471" />
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.Bcl.HashCode" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.CSharp" version="4.7.0" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Abstractions" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Analyzers" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Design" version="3.1.29" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.EntityFrameworkCore.Relational" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.EntityFrameworkCore.Relational.Design" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Abstractions" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Caching.Memory" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Configuration.Binder" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Abstractions" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Logging.Console" version="1.1.1" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Options" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.Extensions.Primitives" version="3.1.29" targetFramework="net471" />
+  <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net471" />
+  <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="MySqlConnector" version="0.69.10" targetFramework="net471" />
+  <package id="NETStandard.Library" version="1.6.1" targetFramework="net471" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net471" />
+  <package id="NFive.SDK.Client" version="0.1.0-tags-0-0-1-beta.1" targetFramework="net471" />
+  <package id="NFive.SDK.Core" version="0.1.0-tags-0-0-1-beta.1" targetFramework="net471" />
+  <package id="NFive.SDK.Plugins" version="0.1.0-tags-0-0-4-beta.1" targetFramework="net471" />
+  <package id="NFive.SDK.Server" version="0.1.0-tags-0-0-2-beta.1" targetFramework="netstandard2.0" />
+  <package id="NGettext" version="0.6.7" targetFramework="net471" />
   <package id="Octokit" version="0.36.0" targetFramework="net452" />
+  <package id="Pomelo.EntityFrameworkCore.MySql" version="3.2.7" targetFramework="net471" />
+  <package id="Pomelo.EntityFrameworkCore.MySql.Design" version="1.1.2" targetFramework="net471" />
+  <package id="Pomelo.JsonObject" version="2.2.1" targetFramework="net471" />
   <package id="Scriban" version="2.1.0" targetFramework="net452" />
   <package id="SemanticVersioning" version="1.2.2" targetFramework="net452" />
   <package id="SharpCompress" version="0.24.0" targetFramework="net452" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net452" />
+  <package id="System.AppContext" version="4.3.0" targetFramework="net471" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net471" />
+  <package id="System.Collections" version="4.3.0" targetFramework="net471" />
+  <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net471" />
+  <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net471" />
+  <package id="System.ComponentModel.Annotations" version="5.0.0" targetFramework="net471" />
+  <package id="System.Console" version="4.3.0" targetFramework="net471" />
+  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net471" />
+  <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net471" />
+  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net471" />
+  <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net471" />
+  <package id="System.Globalization" version="4.3.0" targetFramework="net471" />
+  <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net471" />
+  <package id="System.IO" version="4.3.0" targetFramework="net471" />
   <package id="System.IO.Abstractions" version="7.0.7" targetFramework="net452" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.6.0" targetFramework="net452" />
-  <package id="System.Threading.Tasks.Extensions" version="4.5.3" targetFramework="net452" />
-  <package id="YamlDotNet" version="8.0.0" targetFramework="net452" />
-  <package id="Z.EntityFramework.Extensions" version="4.0.12" targetFramework="net452" />
-  <package id="Z.EntityFramework.Plus.EF6" version="1.12.3" targetFramework="net452" />
-  <package id="Z.Expressions.Eval" version="3.0.5" targetFramework="net452" />
+  <package id="System.IO.Compression" version="4.3.0" targetFramework="net471" />
+  <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net471" />
+  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net471" />
+  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Linq" version="4.3.0" targetFramework="net471" />
+  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net471" />
+  <package id="System.Net.Http" version="4.3.0" targetFramework="net471" />
+  <package id="System.Net.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Net.Sockets" version="4.3.0" targetFramework="net471" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net471" />
+  <package id="System.ObjectModel" version="4.3.0" targetFramework="net471" />
+  <package id="System.Reflection" version="4.3.0" targetFramework="net471" />
+  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Reflection.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net471" />
+  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.Handles" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.InteropServices.RuntimeInformation" version="4.3.0" targetFramework="net471" />
+  <package id="System.Runtime.Numerics" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Algorithms" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net471" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net471" />
+  <package id="System.Text.Encoding" version="4.3.0" targetFramework="net471" />
+  <package id="System.Text.Encoding.Extensions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Text.RegularExpressions" version="4.3.0" targetFramework="net471" />
+  <package id="System.Threading" version="4.3.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net471" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net471" />
+  <package id="System.Threading.Timer" version="4.3.0" targetFramework="net471" />
+  <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net471" />
+  <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net471" />
+  <package id="YamlDotNet" version="12.0.1" targetFramework="net471" />
 </packages>
