--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,4 +59,4 @@ jobs:
         uses: actions/upload-artifact@v3.1.0
         with:
           name: nfpm-${{ env.SEMVER }}
-          path: Build
+          path: src/Build
